--- a/JCGS_Writeup/bibliography.bib
+++ b/JCGS_Writeup/bibliography.bib
@@ -10,20 +10,19 @@
 }
 
 @book{nas2009,
-  title = {{{Strengthening}} Forensic Science in the United States: {{A}} Path Forward},
-  author = {{National Research Council}},
+  title = {Strengthening Forensic Science in the United States: {{A}} Path Forward},
+  author = {{National Research Council (U.S.)}},
   year = {2009},
   publisher = {National Academies Press}
 }
 
 @book{pcast,
-  title = {President's Council of Advisors on Science and Technology: {{Forensic}} Science in Criminal Courts: {{Ensuring}} Scientific Validity of Feature-Comparison Methods},
+  title = {Forensic Science in Criminal Courts: {{Ensuring}} Scientific Validity of Feature-Comparison Methods},
   author = {{President's Council of Advisors on Science and Technology}},
   year = {2016},
   month = sep,
   publisher = {Executive Office of the President of the United States, President's Council},
   address = {Washington, D.C.},
-  url = {https://obamawhitehouse.archives.gov/sites/default/files/microsites/ostp/PCAST/pcast\_forensic\_science\_report\_final.pdf},
   shortauthor = {PCAST}
 }
 
@@ -68,7 +67,7 @@
   number = {1-3},
   pages = {137--141},
   issn = {03790738},
-  doi = {10/gn65cz},
+  doi = {10.1016/j.forsciint.2013.04.025},
   urldate = {2018-08-07},
   langid = {english},
   keywords = {consecutive matching striae,feature profile,forensic science,identification criteria,toolmark identification,topography measurement},
@@ -234,4 +233,44 @@
   doi = {10.1080/01621459.1979.10481038},
   urldate = {2024-11-14},
   keywords = {Graphics,Nonparametric regression,Robust estimation,Scatterplots,Smoothing}
+}
+
+@article{songProposedBulletSignature2000a,
+  title = {Proposed {{Bullet Signature Comparisons Using Autocorrelation Functions}}},
+  author = {Song, Jun-Feng and Vorburger, Theodore V.},
+  year = {2000},
+  month = jul,
+  journal = {NIST},
+  publisher = {Jun-Feng Song, Theodore V. Vorburger},
+  url = {https://www.nist.gov/publications/proposed-bullet-signature-comparisons-using-autocorrelation-functions},
+  urldate = {2023-12-11},
+  langid = {english},
+  keywords = {No DOI found},
+  annotation = {Last Modified: 2017-02-19T20:02-05:00}
+}
+
+@book{wickhamGgplot2ElegantGraphics2016,
+  title = {Ggplot2: {{Elegant}} Graphics for Data Analysis},
+  author = {Wickham, Hadley},
+  year = {2016},
+  publisher = {Springer-Verlag New York},
+  url = {https://ggplot2.tidyverse.org},
+  isbn = {978-3-319-24277-4}
+}
+
+@book{sievertInteractiveWebbasedData2020,
+  title = {Interactive Web-Based Data Visualization with {{R}}, Plotly, and Shiny},
+  author = {Sievert, Carson},
+  year = {2020},
+  publisher = {{Chapman and Hall/CRC}},
+  url = {https://plotly-r.com},
+  isbn = {978-1-138-33145-7}
+}
+
+@manual{vaidyanathanHtmlwidgetsHTMLWidgets2023,
+  type = {Manual},
+  title = {Htmlwidgets: {{HTML}} Widgets for {{R}}},
+  author = {Vaidyanathan, Ramnath and Xie, Yihui and Allaire, {\relax JJ} and Cheng, Joe and Sievert, Carson and Russell, Kenton},
+  year = {2023},
+  url = {https://CRAN.R-project.org/package=htmlwidgets}
 }
